syntax = "proto3";

package service;

option go_package = "protoc/service";

message Empty {}

service JobService {
    rpc JobDetails (Empty) returns (JobDetailsResponse);
}
message JobDetailsResponse {
    string FilePath = 1;
    int32 StartSeg = 2;
    int32 SegLen = 3;
}

service JobDataService {
    rpc JobData (JobDetailsResponse) returns (stream JobDataResponse);
}
message JobDataResponse {
    bytes data = 1;
}

service CondenseResultsService {
    rpc CondenseResults (PartialResults) returns (Empty);
}
message PartialResults {
    string FilePath = 1;
    int32 StartSeg = 2;
    int32 SegLen = 3;
    int32 NumPrimes = 4;
}

service StopConsolidatorService {
    rpc StopConsolidator (Empty) returns (Empty);
}
